[package]
name = "leptonica-rs"
version = "0.1.0"
authors = ["Sergei Solodovnikov <sergei@isolo.me>"]
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
thiserror = "1.0"
leptonica-sys = { git = "https://github.com/Seeneva/leptonica-sys.git", branch = "main" }
